@@ -1,5 +1,12 @@
 $Id$
 
+2016-11-10  Christian Franke  <franke@computer.org>
+
+	os_linux.cpp: Don't detect devices behind hpsa driver as regular
+	SCSI devices.  Suggest to use '-d cciss,N' instead.
+
+	Based on patch provided by Stanislav Brabec.
+
 2016-11-05  Christian Franke  <franke@computer.org>
 
 	update-smart-drivedb.in: Fix 'mv' error on first update with new
